<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView android:id="@+id/spend_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="Spend From: " />

    <Button android:id="@+id/categorize_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end" />

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_title_label" />

    <EditText android:id="@+id/merchant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_amount_label" />

    <EditText android:id="@+id/transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_amount_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_notes_label" />

    <EditText android:id="@+id/transaction_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter transaction notes or memo" />

    <Button android:id="@+id/transaction_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

<!--    <Spinner android:id="@+id/expense_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:spinnerMode="dialog"/>-->

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label" />

    <Button
        android:id="@+id/transaction_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete" />

</LinearLayout>