<resources>
    <string name="app_name">CS160BudgetApp</string>
    <string name="expense_title_hint">Enter a title for the expense.</string>
    <string name="expense_amount_hint">Enter an amount for the expense.</string>
    <string name="expense_title_label">Title</string>
    <string name="expense_amount_label">Amount</string>
    <string name="expense_details_label">Details</string>
    <string name="goal_title_hint">Enter a title for the goal.</string>
    <string name="goal_amount_hint">Enter an amount for the goal.</string>
    <string name="goal_title_label">Title</string>
    <string name="goal_amount_label">Amount</string>
    <string name="goal_details_label">Details</string>
    <string name="transaction_title_hint">Enter the merchant name for the transaction</string>
    <string name="transaction_amount_hint">Enter an amount for the transaction.</string>
    <string name="transaction_title_label">Title</string>
    <string name="transaction_amount_label">Amount</string>
    <string name="transaction_notes_label">Notes</string>
    <string name="income_amount_label">Amount</string>
    <string name="income_amount_hint">Enter an income amount to add.</string>
    <!--    <string name="transaction_details_label">Details</string>-->
    <string name="date_picker_title">Choose a date: </string>
    <string name="save_button_label">Save</string>
    <string name="expense_list_name">Expenses</string>
    <string name="goal_list_name">Goals</string>
    <string name="transaction_list_name">Transactions</string>
    <string name="expense_list_prompt">Spend from: </string>
    <string name="categorize_button_label">Spend from: %1$s</string>
</resources>