<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_title_label" />

    <EditText android:id="@+id/goal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_details_label" />

    <EditText android:id="@+id/goal_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_amount_hint" />

    <Button android:id="@+id/goal_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete" />

    <!--    <CheckBox android:id="@+id/goal_completed"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/expense_solved_label" />-->

</LinearLayout>